# satComTopology

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
src/sat_com_model/: __init__.py  exception.py  model.py
tests/: model_helper.py  test_model.py  test_simulation.py
