[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat_com_topology"
version = "1.0"
authors = [
  { name="Louis BARBIER", email="louis.barbier@isae-supaero.fr" },
]
description = "Satellite communication model package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/elbarbi/satComTopology"
Issues = "https://github.com/elbarbi/satComTopology/issues"


[tool.pytest.ini_options]
pythonpath = [
  "."
]
